--- a/polls/templates/polls/cancel_tutor.html
+++ b/polls/templates/polls/cancel_tutor.html
@@ -59,7 +59,8 @@
           <ul class="navbar-nav">
             <li><a href="/quick-tutor/">Home</a></li>
             <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-            <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
+            <li><a href="https://chat-site6.herokuapp.com/">Chat App</a></li>
+
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
@@ -67,7 +68,7 @@
                 <li class="nav-item">
                     <a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
                 </li>
-
+                <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
             <a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
             {% else %}
                     <li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
