--- a/polls/templates/polls/contact_us.html
+++ b/polls/templates/polls/contact_us.html
@@ -60,7 +60,7 @@
 			  <ul class="navbar-nav">
 				<li><a href="/quick-tutor/">Home</a></li>
 				<li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-				<li><a href="/quick-tutor/student_profile">Your Profile</a></li>
+				<li><a href="https://chat-site6.herokuapp.com/">Chat App</a></li>
 
 	
 	
@@ -69,7 +69,7 @@
 					<li class="nav-item">
 						<a class="nav-link disabled" href=""><p>Logged in as: {{ user.username }}</p><span class="sr-only">(current)</span></a>
 					</li>
-	
+					<li><a href="/quick-tutor/student_profile">Your Profile</a></li>
 				<a class="nav-link" href="{% url 'logout' %}">Logout<span class="sr-only">(current)</span></a>
 				{% else %}
 						<li><a href="{% url 'social:begin' 'google-oauth2' %}">Login/Register</a></li>
