update UI on student and tutor requests

--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -141,7 +141,8 @@
               <li><a href="/quick-tutor/">Home</a></li>
               <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
               <li><a href="/quick-tutor/student_profile">Your Profile</a></li>
-              
+              <li><a href="https://chat-site6.herokuapp.com/">Chat App</a></li>
+
   
   
   <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
