--- a/polls/templates/polls/student_requests.html
+++ b/polls/templates/polls/student_requests.html
@@ -59,7 +59,7 @@
           <ul class="navbar-nav">
             <li><a href="/quick-tutor/">Home</a></li>
             <li><a href="/quick-tutor/tutor_match">Find a Tutor</a></li>
-            <li><a href =  "/quick-tutor/student_profile>">Your Profile</a></li>
+            <li><a href =  "/quick-tutor/student_profile">Your Profile</a></li>
 
 
 <!--             <li><a href="tutor_match.html">Login/Register</a></li>-->
