--- a/polls/templates/polls/confirm_cancel.html
+++ b/polls/templates/polls/confirm_cancel.html
@@ -114,7 +114,7 @@
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 banner-right">
             <h1 class="text-white">
-              Your request has been cancelled.
+              Your request has been canceled.
             </h1>
             <p class="mx-auto text-white  mt-20 mb-40"><a class = "nav-link" href="quick-tutor/tutor_match" style = "color:white"></a>
               Feel free to request another tutor, if needed.
