--- a/polls/templates/polls/confirm_update_request.html
+++ b/polls/templates/polls/confirm_update_request.html
@@ -115,7 +115,7 @@
       <div class="container">
         <div class="row justify-content-center align-items-center">
           <div class="col-lg-12 banner-right">
-              {% if status == Accepted %}
+              {% if status == "Accepted" %}
             <h1 class="text-white">
               Success! You have {{ status }} this Request.
             </h1>
@@ -126,8 +126,7 @@
               <p class="mx-auto text-white  mt-20 mb-40">
                 We will let the student know you have denied their request.
               </p>
-            <p class="mx-auto text-white  mt-20 mb-40"><a class = "nav-link" href="quick-tutor/tutor_requests" style = "color:white"></a>
-              My Tutor Request Page
+              {% endif %}
             </p>
           </div>
         </div>
