--- a/polls/templates/polls/new_profile.html
+++ b/polls/templates/polls/new_profile.html
@@ -87,22 +87,24 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">YOUR PROFILE</h3>
   <p class="w3-center w3-large">Here is your profile information</p>
-  <div style="margin-top:48px">
-    <p><i class="w3-xxlarge w3-margin-right"></i> Name: {{user.first_name }}</p>
-    <p><i class="w3-xxlarge w3-margin-right"></i> Preferred Name: {{ user.profile.preferred_name }}</p>
-    <p><i class="w3-xxlarge w3-margin-right"> </i> Email: {{ user.email}}</p>
-    <p><i class="w3-xxlarge w3-margin-right"> </i> Location: {{ user.profile.location}}</p>
-    <p><i class="w3-xxlarge w3-margin-right"> </i> Availability: {{ user.profile.availability}}</p>
-    <p><i class="w3-xxlarge w3-margin-right"> </i> Are you a Tutor: {{user.profile.student_tutor}}</p>
-    <p><i class="w3-xxlarge w3-margin-right"> </i> Venmo: {{ user.profile.venmo }}</p>
-    <p><i class="w3-xxlarge w3-margin-right"> </i> Bio: {{user.profile.skills }}</p>
-      {% if user.profile.student_tutor %}
-        <p><a class="w3-button w3-xxlarge w3-margin-left" href="quick-tutor/tutor_requests"> View who has requested you</a></p>
-      {% else %}
-      {% endif %}
-      <p><a class="w3-button w3-xxlarge w3-margin-left" href="quick-tutor/student_requests"> View your requests</a></p>
-    <br>
-
+   <div class="w3-container w3-left" style="margin-top:10px">
+       <div class="w3-content" style="padding-left:300px">
+           <p class="w3-wide"><b>Name:</b>{{user.first_name}} {{user.last_name}}</p>
+           <p class="w3-wide"><b>Preferred Name</b>:{{user.profile.preferred_name}}</p>
+           <p class="w3-wide"><b>Year:</b>{{user.profile.student_year_in_school}}</p>
+           <p class="w3-wide"><b>Academic Focuses:</b>{{user.profile.need_help_with}}</p>
+           <p class="w3-wide"><b>Location:</b>{{user.profile.location}}</p>
+           <p class="w3-wide"><b>Availability:</b>{{user.profile.availability}}</p>
+           <p class="w3-wide"><b>Venmo:</b>{{user.profile.venmo}}</p>
+           {% if user.profile.student_tutor %}
+           <p class="w3-wide"><b>Are you a tutor:</b>Yes</p>
+           <p class="w3-wide"><b>Skills:</b> {{user.profile.skills}}</p>
+           {% else %}
+           {% endif %}
+           <a href="/quick-tutor/student_profile/edit/" class="w3-button w3-black w3-margin-top">Edit Information</a>
+       </div>
+    </div>
+</div>
     <form action="/action_page.php" target="_blank">
       <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
       <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
