--- a/polls/templates/polls/new_profile.html
+++ b/polls/templates/polls/new_profile.html
@@ -87,7 +87,7 @@ body, html {
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">YOUR PROFILE</h3>
   <p class="w3-center w3-large">Here is your profile information</p>
-   <div class="w3-container w3-left" style="margin-top:10px">
+   <div class="w3-col m6 w3-left" style="margin-top:10px">
        <div class="w3-content" style="padding-left:300px">
            <p class="w3-wide"><b>Name:</b>{{user.first_name}} {{user.last_name}}</p>
            <p class="w3-wide"><b>Preferred Name</b>:{{user.profile.preferred_name}}</p>
@@ -103,27 +103,20 @@ body, html {
            {% endif %}
            <a href="/quick-tutor/student_profile/edit/" class="w3-button w3-black w3-margin-top">Edit Information</a>
        </div>
+   </div>
+    <div class="w3-col m6 w3-right">
+        <p><a href="/quick-tutor/student_requests/" class="w3-button w3-black w3-margin-top">My Requests</a></p>
+        {% if user.profile.student_tutor %}
+        <p><a href="/quick-tutor/tutor_requests" class="w3-button w3-black w3-margin-top">See Who Requested Me</a></p>
+        {% else %}
+        {% endif %}
     </div>
 </div>
-    <form action="/action_page.php" target="_blank">
-      <p><input class="w3-input w3-border" type="text" placeholder="Name" required name="Name"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Email" required name="Email"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Subject" required name="Subject"></p>
-      <p><input class="w3-input w3-border" type="text" placeholder="Message" required name="Message"></p>
-      <p>
-        <button class="w3-button w3-black" type="submit">
-          <i class="fa fa-paper-plane"></i> SEND MESSAGE
-        </button>
-      </p>
-    </form>
-    <!-- Image of location/map -->
-    <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
-  </div>
-</div>
+
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+  <a href="/quick-tutor/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Home</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
