--- a/polls/templates/polls/new_index.html
+++ b/polls/templates/polls/new_index.html
@@ -3,7 +3,7 @@
 <html>
 
 
-<title>W3.CSS Template</title>
+<title>Qtees</title>
 
 
 <meta charset="UTF-8">
@@ -42,7 +42,7 @@ body, html {
     <div class="w3-right w3-hide-small">
         {% if user.is_authenticated %}
             <!-- add drop down -->
-            <div class="w3-dropdown-hover">
+            <div class="w3-dropdown-hover w3-white">
                 <button class="w3-button">Welcome, {{ user.first_name }}</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
                     <a href="/quick-tutor/student_profile" class = "w3-bar-item w3-button">MY PROFILE</a>
