--- a/polls/templates/polls/new_edit_profile.html
+++ b/polls/templates/polls/new_edit_profile.html
@@ -81,42 +81,49 @@ body, html {
         {% endif %}
 </nav>
 
+<!-- Edit Profile Form -->
+<div class="w3-container w3-light-grey" style="padding:128px 16px" id="edit">
+  <h3 class="w3-center">Profile</h3>
+  <p class="w3-center w3-large">Add to or update your profile</p>
+  <div style="margin-top:48px">
+    <form method = "post">
+        {% csrf_token %}
 
-
-<!-- Profile Section -->
-<div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
-  <h3 class="w3-center">YOUR PROFILE</h3>
-  <p class="w3-center w3-large">Here is your profile information</p>
-   <div class="w3-col m6 w3-left" style="margin-top:10px">
-       <div class="w3-content" style="padding-left:300px">
-           <p class="w3-wide"><b>Name:</b>{{user.first_name}} {{user.last_name}}</p>
-           <p class="w3-wide"><b>Preferred Name</b>:{{user.profile.preferred_name}}</p>
-           <p class="w3-wide"><b>Year:</b>{{user.profile.student_year_in_school}}</p>
-           <p class="w3-wide"><b>Academic Focuses:</b>{{user.profile.need_help_with}}</p>
-           <p class="w3-wide"><b>Location:</b>{{user.profile.location}}</p>
-           <p class="w3-wide"><b>Availability:</b>{{user.profile.availability}}</p>
-           <p class="w3-wide"><b>Venmo:</b>{{user.profile.venmo}}</p>
-           {% if user.profile.student_tutor %}
-           <p class="w3-wide"><b>Are you a tutor:</b>Yes</p>
-           <p class="w3-wide"><b>Skills:</b> {{user.profile.skills}}</p>
-           {% else %}
-           {% endif %}
-           <a href="/quick-tutor/student_profile/edit/" class="w3-button w3-black w3-margin-top">Edit Information</a>
-       </div>
-   </div>
-    <div class="w3-col m6 w3-right">
-        <p><a href="/quick-tutor/student_requests/" class="w3-button w3-black w3-margin-top">My Requests</a></p>
-        {% if user.profile.student_tutor %}
-        <p><a href="/quick-tutor/tutor_requests" class="w3-button w3-black w3-margin-top">See Who Requested Me</a></p>
-        {% else %}
-        {% endif %}
-    </div>
+          <label for="id_preferred_name">Preferred Name:</label>
+          <p><input class="w3-input w3-border" name = "preferred_name" id="id_preferred_name" type="text" maxlength= "200" placeholder="Preferred Name" required=""></p>
+          <label for="id_student_year_in_school">Year:</label>
+          <select name="student_year_in_school" id="id_student_year_in_school">
+              <option value="1Y" selected="">First Year</option>
+              <option value="2Y">Second Year</option>
+              <option value="3Y">Third Year</option>
+              <option value="4Y">Fourth Year</option>
+          </select>
+          <label for="id_need_help_with">Academic Focus:</label>
+          <p><input class="w3-input w3-border" id="id_need_help_with" name="need_help_with" type="text" placeholder="Academic Focus"></p>
+          <label for="id_location">Location:</label>
+          <p><input class="w3-input w3-border" id="id_location" name ="location" required="" type="text" maxlength= "200" placeholder="Location"></p>
+          <label for="id_student_tutor">Register as a Tutor:</label>
+          <p><input class="w3-input w3-border" id = "id_student_tutor" name="student_tutor" type="checkbox" checked=""></p>
+          <label for="id_availability">Availability:</label>
+          <p><input class="w3-input w3-border" id="id_availability" name="availability" type="text" maxlength="200"></p>
+          <label for="id_skills">Skills:</label>
+          <p><input class="w3-input w3-border" type="text" id="id_skills" name="skills" maxlength="200"></p>
+          <label for="id_venmo">Venmo:</label>
+          <p><input class="w3-input w3-border" id="id_venmo" name="venmo" type="text" maxlength="200" required=""></p>
+          <p>
+            <button class="w3-button w3-black" type="submit">
+                SAVE CHANGES
+            </button>
+          </p>
+    </form>
+    <!-- Image of location/map -->
+    <img src="/w3images/map.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px">
+  </div>
 </div>
-
 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64">
-  <a href="/quick-tutor/" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>Home</a>
+  <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -155,4 +162,4 @@ function w3_close() {
 }
 </script>
 </body>
-</html>
+</html>>
